<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/button_year"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_black"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_tick_annual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:src="@drawable/ic_tick_white"
        app:layout_constraintBottom_toBottomOf="@id/button_year"
        app:layout_constraintLeft_toLeftOf="@id/button_year"
        app:layout_constraintTop_toTopOf="@id/button_year" />

    <TextView
        android:id="@+id/tv_year_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/onboarding_premium_period_year"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/button_year"
        app:layout_constraintTop_toTopOf="@id/button_year" />

    <TextView
        android:id="@+id/tv_trial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="4dp"
        android:text="@string/onboarding_premium_trial"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/button_year"
        app:layout_constraintTop_toBottomOf="@id/tv_year_period" />

    <TextView
        android:id="@+id/tv_year_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@id/button_year"
        app:layout_constraintTop_toTopOf="@id/button_year" />

    <TextView
        android:id="@+id/tv_year_price_per_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="@id/button_year"
        app:layout_constraintTop_toTopOf="@id/tv_trial" />

    <View
        android:id="@+id/button_month"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_white"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/button_year" />

    <ImageView
        android:id="@+id/iv_tick_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:src="@drawable/ic_tick_white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/button_month"
        app:layout_constraintLeft_toLeftOf="@id/button_month"
        app:layout_constraintTop_toTopOf="@id/button_month" />

    <TextView
        android:id="@+id/tv_month_preiod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_premium_period_month"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/button_month"
        app:layout_constraintLeft_toLeftOf="@id/tv_year_period"
        app:layout_constraintTop_toTopOf="@id/button_month" />

    <TextView
        android:id="@+id/tv_month_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/button_month"
        app:layout_constraintRight_toRightOf="@id/button_month"
        app:layout_constraintTop_toTopOf="@id/button_month" />


</androidx.constraintlayout.widget.ConstraintLayout>